--- a/src/components/CustomTable.css
+++ b/src/components/CustomTable.css
@@ -42,7 +42,7 @@ thead {
 }
 .pagination button {
   background-color: #f5f5f5;
-  border: none;
+  border: 1px solid #ccc;
   border-radius: 4px;
   padding: 10px;
   margin: 0 5px;
@@ -57,15 +57,15 @@ thead {
 select {
   appearance: none;
   outline: 0;
-  border: 0;
   box-shadow: none;
   flex: 1;
-  padding: 0 1em;
   color: #333;
   background-color: #f5f5f5;
   background-image: none;
   cursor: pointer;
-  border: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 0 20px;
 }
 /* Remove IE arrow */
 select::-ms-expand {
@@ -76,8 +76,8 @@ select::-ms-expand {
   position: relative;
   display: flex;
   width: 120px;
-  height: 3em;
-  border-radius: 0.25em;
+  height: 40px;
+  border-radius: 4px;
   overflow: hidden;
   box-shadow: none;
 }
